<resources>
    <string name="app_name">UTSPraktik-IF10K-10119907-TDONI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="form_pengisian_data">Form Pengisian Data</string>
    <string name="jenis_test">Jenis Test</string>
    <string name="harus_diisi">• Harus Diisi</string>
    <string name="rapid_antigen">Rapid Antigen</string>
    <string name="pcr">PCR</string>
    <string name="tanggal_terkonfirmasi">Tanggal Terkonfirmasi</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="nik">NIK</string>
    <string name="masukan_nik">Masukan NIK</string>
    <string name="nama">Nama</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="orangtua">Orangtua</string>
    <string name="suami_istri">Suami/Istri</string>
    <string name="anak">Anak</string>
    <string name="kerabat_lainnya">Kerabat Lainnya</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="dengan_ini_saya_menyetujui_bahwa_data_yang_saya_isikan_adalah_benar">Dengan ini saya menyetujui bahwa data yang saya isikan adalah benar</string>
    <string name="cek_kembali_isian_data">Cek Kembali Isian Data</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="hubungan_dengan_anda">Hubungan Dengan Anda</string>
    <string name="check_hasil_test">Check Hasil Test</string>
    <string name="ubah">Ubah</string>
</resources>